Fix main right section overlap at width les than 576px
width Fix in Posts

Unit Tests for Organisation Settings Page (#228)

Add more checks for DOM content render

rename test file

remove redundant test file

--- a/src/screens/OrganizationEvents/OrganizationEvents.module.css
+++ b/src/screens/OrganizationEvents/OrganizationEvents.module.css
@@ -114,6 +114,19 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 575.5px) {
+  .justifysp {
+    padding-left: 55px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .mainpageright {
+    width: 90%;
+  }
+}
 .addbtn {
   border: 1px solid #e8e5e5;
   box-shadow: 0 2px 2px #e8e5e5;
